# fantasy_funball

./: .dockerignore  .env  .env.docker  .env.local  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  Procfile  README.md  daily_update.sh  docker-compose.yml  fly.toml  manage.py  pyproject.toml  requirements.txt  run.sh  tox.ini
.github/workflows/: heroku_deploy.yml  linting_workflow.yml  testing_workflow.yml  testing_workflow_ft.yml  testing_workflow_ut.yml
core/: asgi.py  exceptions.py  settings.py  urls.py  wsgi.py
etc/: crontab
fantasy_funball/: asgi.py  get_fixtures.py  settings.py  urls.py  wsgi.py
fantasy_funball/demos/: crud_flow_demo.py
fantasy_funball/dev_tools/: insert_gameweek_void_team.py  insert_void_choices.py  reset_results.py  reset_standings.py  restore_results.py  update_players.py
fantasy_funball/fpl_interface/: __init__.py  interface.py
fantasy_funball/helpers/: date.py
fantasy_funball/logic/: __init__.py  check_choices.py  choices.py  determine_gameweek.py  fixtures.py  helpers.py  players.py  random_generator.py  results.py  standings.py  update_fixtures.py  update_results.py  update_standings.py
fantasy_funball/migrations/: 0001_initial.py  0002_auto_20210907_1656.py  0002_choices.py  0002_gameweeksummary.py  0003_auto_20210918_0819.py  0004_auto_20211002_0943.py
fantasy_funball/models/: __init__.py  choices.py  fixtures.py  funballer.py  misc.py  players.py  teams.py
fantasy_funball/scheduler/: update_database.py  (+2 more)
functional_tests/: conftest.py  harness.py  mock_test.py  test_funballer.py  test_gameweek.py
(+52 files in other folders)
