[tool.poetry]
name = "fantasy_funball"
version = "1.9.0"
description = "Backend for Fantasy Funball"
authors = ["Patrick McLaughlin"]

[tool.poetry.dependencies]
python = "~3.9"
dj-database-url = "^0.5"
Django = "^3.2"
django-heroku = "^0.3"
djangorestframework = "^3.12"
gunicorn = "^20.1"
psycopg2 = "==2.8.6"
requests = "^2.25"
sentry-sdk = "^1.3"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
isort = "*"
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
